docs(sb4-migration): note Java 25 Netty native-access warning; fix Jetty pin
Document the JEP 472 restricted-method warning from Netty's System.loadLibrary
under JDK 25 (benign now, application-level grant, left unaddressed). Correct the
Jetty pin from the stale 12.0.30 to the current 12.0.36 and explain the test-only
scope, CVE rationale, and the WireMock 4.x/Jetty 12.1 follow-up.